added basic routing for login and index

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Squerral Cards</h1>
+  <h1>Squirrel Cards</h1>
   <h3>Please enter a username</h3>
   <form action="/login" method="post">
     <input type="text" name="username">
