Added footer and associated styling

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,9 +16,17 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>Squirrel Cards</title>
 </head>
 <body>
   <%= yield %>
+  <div class="footer">
+    <p>
+      <a href="https://github.com/dandydanny">Danny</a>,
+      <a href="https://github.com/jsum528">Jacky</a>,
+      <a href="https://github.com/juandefelix">Juan</a>, and 
+      <a href="https://github.com/ballauriena">Laura.</a>
+    </a>
+  </div>
 </body>
 </html>
