--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7,3 +7,9 @@
 th {
   text-align: left;
 }
+.footer {
+	margin: 20px auto;
+  width: 600px;
+  padding: 0px 20px 20px 20px;
+  text-align: center;
+}
