updated models and migrate and soft landing page

--- a/app/views/landing.erb
+++ b/app/views/landing.erb
@@ -1,1 +1,7 @@
-<%= @user %>
+<div class="container">
+  <h1>Welcome to Squirrel Cards <%= User.find(@user).name %></h1>
+  <a href="/new">New Game</a>
+<h3>Recent Games</h3>
+  <ul>
+  </ul>
+</div>
