Added JS to show sign up form on click

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,13 +7,15 @@
     Password:&nbsp <input type="text" name="password">
     &nbsp&nbsp&nbsp<input type="submit" value="Login">
   </form>
-  <h3>or Create a New Account</h3>
-  <a href="#">Create new user</a>
+  <br>
+  <a href="#" id="show_signup">Sign Up</a>
   <br><br>
+  <div class="signup">
     <form action="/create" method="post">
     Username: <input type="text" name="username">
     <br><br>
     Password:&nbsp <input type="text" name="password">
-    &nbsp&nbsp&nbsp<input type="submit" value="Login">
-  </form>
+    &nbsp&nbsp&nbsp<input type="submit" value="Sign Me Up">
+    </form>
+  </div>
 </div>
