--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,7 +1,9 @@
 <!-- this will display all of our decks as links -->
 <div class= "container">
   <h1>Select A Deck</h1>
+  <form action="/start" method="post">
   <%Deck.all.each do |deck|%>
-    <a href="/game/<%=deck.name%>"> <%=deck.name%> </a><br>
+    <input type="submit" name="name" value="<%="#{deck.name}"%>"><br>
   <%end%>
+  </form>
 </div>
