--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
   <h1>Squirrel Cards</h1>
   <h3>Please Enter Your Username and Password</h3>
   <form action="/login" method="post">
-    Username: <input type="text" name="username">
+    Username: <input type="text" name="username" autofocus>
     <br><br>
     Password:&nbsp <input type="text" name="password">
     &nbsp&nbsp&nbsp<input type="submit" value="Login">
