working version of signup, signin, results, and landing page

--- a/app/views/create_success.erb
+++ b/app/views/create_success.erb
@@ -1,3 +1,5 @@
+<h1 class='name_error'>You Created a New Account</h1>
+<h3 class='try_another'>Please Login Using New Username<h3>
 <img id='soldier' src='/soldier.bmp' height='100' width='100'>
 <h1 id='title'>Squirrel Cards</h1>
 <p id='quotes'>- Aren't we all just squirrels lookin' for a nut?</p>
@@ -5,6 +7,6 @@
   <input class='login' type='text' name='name' value='Username' onFocus="this.value=''">
   <input class='login' type='password' name='password' value='Password' onFocus="this.value=''">
   <br>
-  <a class='create' href='/create_user'>Create an Account</a>
+  <a id='create' href='/create_user'>Create an Account</a>
   <input id='submit' type='submit' value='Login'>
 </form>
