--- a/app/views/error_signup.erb
+++ b/app/views/error_signup.erb
@@ -1,4 +1,6 @@
-<h1 id ='user_title'>You're on Deck</h1>
+<h1 class='name_error'><%= error_message(@error) %></h1>
+<h3 class='try_another'>Please Try Another<h3>
+<h1 id ='user_title'>Your on Deck</h1>
 <img id ='bat' src='/bat.jpg' width='153.6' height='115.2'></img>
 <h3 id='under_bat'>Create a Username and Password</h3>
 <form id='create_form' action='/create_user' method='post'>
