--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,36 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
   <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
   <link rel="stylesheet" href="/css/application.css">
-
-  <!-- Favicon! Must include forward slash, otherwise the favicon URL
-  call will fall into the /round/Game route -->
-
-  <link rel="icon" type="image/png" href="/favicon128.png">
-
+  <link rel='icon' type='image/ico' href='/squirrel.ico'
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
-
   <title>Squirrel Cards</title>
 </head>
 <body>
-  <%= yield %>
-  <div class="footer">
-    <p>
-      <a href="https://github.com/dandydanny">Danny</a>,
-      <a href="https://github.com/jsum528">Jacky</a>,
-      <a href="https://github.com/juandefelix">Juan</a>, and
-      <a href="https://github.com/ballauriena">Laura.</a>
-    </a>
+  <div class="top-nav">
+    <h1 id='nav_title'>Squirrel Cards</h1>
+    <ul class="nav">
+      <li><a href="/home">Home</a></li>
+      <li><a href="/logout">Log Out</a></li>
+    </ul>
+  </div>
+  <div class='container'>
+    <%= yield %>
   </div>
 </body>
 </html>
