--- a/app/views/card.erb
+++ b/app/views/card.erb
@@ -12,7 +12,7 @@
 
 <!--     <input type="hidden" name="id" value="<%= @card.id %>"> -->
   </form>
-  <form action="/exit" method= "post">
+  <form action="/exit" method= "get">
     <input type="submit" value="End Game">
   </form>
 </div>
