--- a/app/views/last_card.erb
+++ b/app/views/last_card.erb
@@ -1,8 +1,8 @@
-<div class="container">
 
   <p><%= @guess %></p>
 
   <p>GAME OVER! Thank you for playing!</p>
+  <form action="/exit" method= "get">
+    <input type="submit" value="End Game">
+  </form>
 
-
-</div>
