--- a/app/views/deck_select.erb
+++ b/app/views/deck_select.erb
@@ -1,4 +1,6 @@
 <h1>Please Pick a Deck</h1>
-<form action='/deck/abbreviations' type='get'>
-  <input class='button' type='submit' value='State Abbreviations'>
+<form action='/start' method='post'>
+  <% Deck.all.each do |deck| %>
+    <input class='button' type='submit' name="name" value="<%= "#{deck.name}" %>">
+    <% end %>
 </form>
