updated create deck page, getting rid of the underscore and capitalizing the deck names

--- a/app/views/deck_select.erb
+++ b/app/views/deck_select.erb
@@ -1,6 +1,7 @@
 <h1>Please Pick a Deck</h1>
 <form action='/start' method='post'>
   <% Deck.all.each do |deck| %>
-    <input class='button' type='submit' name="name" value="<%= "#{deck.name}" %>">
-    <% end %>
+    <input class='button' type='submit' name="name" value="<%= "#{deck.name.split("_").map(&:capitalize).join(" ")}" %>">
+    <input type='hidden' name='name' value='<%= "#{deck.name}" %>'>
+  <% end %>
 </form>
